adaptive, some fix: dasgboard + user_wrap

--- a/src/styles/adaptive/_user_wrap.sass
+++ b/src/styles/adaptive/_user_wrap.sass
@@ -1,11 +1,10 @@
 @media screen and (max-width: 1279px)
     .user_wrap
         .user_profile_image
-            margin-right: 5px !important
+            margin: auto !important
         .user_details_wrap
             display: none
         .user_navigation_wrap
-            width: 200px !important
+            width: 128px !important
         svg-icon
-            svg
-                width: 12px !important
+            display: none !important
